# UDPTest

./: CMakeLists.txt  CMakeUserPresets.json  README.md
Client/: CMakeLists.txt  client.cpp
Server/: CMakeLists.txt  server.cpp
UDPClientWindow/: CMakeLists.txt  udpclientwindow.cpp  udpclientwindow.h
UDPLib/: CMakeLists.txt  udplib.cpp  udplib.h
